<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titulo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo" />

    <EditText
        android:id="@+id/titulo_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tituloincidencia" />

    <TextView
        android:id="@+id/descripcion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc" />

    <EditText
        android:id="@+id/descripcion_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_crear_mantenimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createincidencia" />

</LinearLayout>