<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID: "
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/iduseralmacen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/importancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importancia"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/fechacreacionalmacen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechacreacion"
        android:textColor="@color/black"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/fechafinalmacen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechafin"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/desc"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/descripcion_contenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textColor="@color/black"
        android:textSize="14sp" />
    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedido"/>

</LinearLayout>

