<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/producto_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto" />

            <EditText
                android:id="@+id/input_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cantidad_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad" />

            <EditText
                android:id="@+id/cantidad_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/descripcion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc" />

    <EditText
        android:id="@+id/descripcion_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:id="@+id/crear_producto_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createproduct" />

</LinearLayout>
